--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -33,9 +33,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
-    implementation "com.ms:module-super:debug-latest"
+
+    releaseImplementation "com.ms:android-module-super:latest-RELEASE"
+    debugImplementation "com.ms:android-module-super:latest-DEBUG"
+
+
 
 }
 
-apply from:"./mavenpublish_local.gradle"
+apply from: "./maven_publish.gradle"
